# raman_data

./: .gitignore  DATASETS.md  README.md  RELEASING.md  dataset_to_huggingface.md  demo.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
croissant_files/: acetic_acid_species.json  adenine_colloidal_gold.json  adenine_colloidal_silver.json  adenine_solid_gold.json  adenine_solid_silver.json  alzheimer.json  amino_acids_glycine.json  amino_acids_leucine.json  amino_acids_phenylalanine.json  amino_acids_tryptophan.json  bacteria_identification.json  biomolecules_reference.json  bioprocess_analytes_anton_532.json  bioprocess_analytes_anton_785.json  bioprocess_analytes_kaiser.json  bioprocess_analytes_metrohm.json  bioprocess_analytes_mettler_toledo.json  bioprocess_analytes_tec5.json  bioprocess_analytes_timegate.json  bioprocess_analytes_tornado.json  bioprocess_substrates.json  cancer_cell_(cooh)2.json  cancer_cell_cooh.json  cancer_cell_nh2.json  chembl_molecules.json  citric_acid_species.json  comfile_stroke.json  covid19_salvia.json  covid19_serum.json  deepr_denoising.json  deepr_super_resolution.json  ecoli_fermentation.json  ecoli_metabolites.json  ecoli_metabolites_dig4bio.json  flow_microgel_synthesis.json  formic_acid_species.json  fuel_benchtop.json  fuel_handheld.json  hair_dyes_sers.json  head_neck_cancer.json  (+44 more)
examples/: demo.ipynb  example_all.py  example_single.py  utils.py
raman_data/: __init__.py  datasets.py  exceptions.py  types.py
raman_data/loaders/: BaseLoader.py  FigshareLoader.py  GitHubLoader.py  GoogleDriveLoader.py  HugLoader.py  HuggingFaceLoader.py  ILoader.py  KagLoader.py  KaggleLoader.py  LoaderTools.py  MendeleyLoader.py  MiscLoader.py  RWTHLoader.py  ZenLoader.py  ZenodoLoader.py  ZipLoader.py  ___init__.py  __init__.py  utils.py
raman_data/loaders/helper/: __init__.py  bacteria.py  organic.py  prepare_data.py  rruff.py
scripts/: generate_croissant.py  generate_readme_datasets.py  rai_supplement.yaml
tests/: test_loaders.py  test_package.py  test_raman_data.py  test_readme_datasets.py
