[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raman-data"
version = "0.0.1"
authors = [
  { name="Mario Koddenbrock", email="mario.koddenbrock@htw-berlin.de" },
  { name="Oskar Fulde", email="oskar.fulde@example.com" },
  { name="Robert Koch", email="TODO@example.com" },
]
description = "A unified Python package for accessing various Raman spectroscopy datasets."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "requests",
    "tqdm",
    "huggingface_hub",
    "kaggle",
]

[project.urls]
"Homepage" = "https://github.com/ml-lab-htw/raman_data"
"Bug Tracker" = "https://github.com/ml-lab-htw/raman_data/issues"

