[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "raman-data"
authors = [
  { name="Mario Koddenbrock", email="mario.koddenbrock@htw-berlin.de" },
  { name="Oskar Fulde", email="oskar.fulde@example.com" },
  { name="Robert Koch", email="TODO@example.com" },
]
description = "A unified Python package for accessing various Raman spectroscopy datasets."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/ml-lab-htw/raman_data"
"Bug Tracker" = "https://github.com/ml-lab-htw/raman_data/issues"

[project.optional-dependencies]
test = [
    "pytest"
]
[tool.setuptools.dynamic]
version = {attr = "raman_data.__version__"}
dependencies = {file = "requirements.txt"}
